--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,10 @@ html{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 20 px;
+    padding: 15px 20px;
 }
 .contenedor-header header .logo a{
-    font-family: 'Righeous';
+    font-family: 'Righteous';
     font-size: 36px;
     color: #1cb698;
     text-decoration: none;
@@ -55,22 +55,26 @@ html{
     cursor: pointer;
     display: none;
 }
+
 /*HOME SECTION*/
 .home{
-    background: linear-gradient(to top, rgba(30,35,38,.8),rgba(30,35,38,1)),url(img/png-background.jpg);
-    background-size: cover; /* Asegura que la imagen cubra todo el fondo */
+    background: linear-gradient(to top, rgba(30,35,38,.8),rgba(30,35,38,1)),url(img/back1.avif);
     background-position: center; /* Centra la imagen de fondo */
+    background-size: cover; /* Asegura que la imagen cubra todo el fondo */
     height: 100vh;
     color: #fff;
     display: flex;
+    justify-content: center;
     align-items: center;
     background-repeat: no-repeat; /* Evita que la imagen se repita */
 }
+
 .home .contenido-banner {
     padding: 20px;
     background-color: #1e2326;
     max-width: 350px;
     margin: auto;
+    margin-top: 5%;
     text-align: center;
     border-radius: 40px;
 }
@@ -106,6 +110,467 @@ html{
 }
 .home .contenido-banner .redes a:hover{
     background-color: #1cb698;
+}
+
+/*ABOUT ME SECTION*/
+.aboutme{
+    background-color: #1e2326;
+    color: #fff;
+    padding: 50px 20px;
+}
+.aboutme .contenido-section{
+    max-width: 1100px;
+    margin: auto;
+}
+.aboutme h2{
+    font-size: 48px;
+    font-family: 'Righteous';
+    text-align: center;
+    padding: 20px 0;
+}
+.aboutme .contenido-section p{
+    font: 18px;
+    line-height: 22px;
+    margin-bottom: 20px;
+}
+.aboutme .contenido-section p span{
+    color: #1cb698;
+    font-weight: bold;
+}
+.aboutme .fila{
+    display: flex;
+}
+.aboutme .fila .col{
+    width: 50%;
+}
+.aboutme .fila .col h3{
+    font-size: 28px;
+    font-family: 'Righteous';
+    margin-bottom: 25px;
+ }
+ .aboutme .fila .col ul{
+    list-style: none;
+ } 
+ .aboutme .fila .col ul li{
+    margin: 12px 0;
+ }
+ .aboutme .fila .col ul li strong{
+    display: inline-block;
+    color: #1cb698;
+    width: 130px;
+ }
+ .aboutme .fila .col ul li span{
+    background-color: #1cb698;
+    padding: 3px;
+    font-weight: bold;
+    border-radius: 5px;
+ }
+ .aboutme .fila .col .contenedor-interest{
+    display: flex;
+    flex-wrap: wrap;
+ }
+ .aboutme .fila .col .contenedor-interest .interest{
+    width: 100px;
+    height: 100px;
+    background-color: #252a2e;
+    border-radius: 10px;
+    margin: 0 15px 15px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+ }
+ .aboutme .fila .col .contenedor-interest .interest:hover{
+    background-color: #1cb698;
+ }
+ .aboutme .fila .col .contenedor-interest .interest i{
+    font-size: 30px;
+    margin-bottom: 10px;
+ }
+ .aboutme button{
+    cursor: pointer;
+    background-color: transparent;
+    border: 2px solid #fff;
+    width: fit-content;
+    display: block;
+    margin: 20px auto;
+    padding: 10px 22px;
+    font-size: 16px;
+    color: #fff;
+    position: relative;
+    z-index: 10;
+ }
+ .aboutme button .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #1cb698;
+    z-index: -1;
+    transition: 1s;
+ }
+ .aboutme button:hover .overlay{
+    width: 100%;
+ }
+
+ /*SKILLS SECTION*/
+ .skills{
+    background-color: #252a2e;
+    color: #fff;
+    padding: 50px 20px;
+}
+.skills .contenido-section{
+    max-width: 1100px;
+    margin: auto;
+}
+.skills h2{
+    font-size: 48px;
+    font-family: 'Righteous';
+    text-align: center;
+    padding: 20px 0;
+}
+.skills .fila{
+    display: flex;
+}
+.skills .fila .col{
+    width: 50%;
+    padding: 0 20px;
+}
+.skills .fila .col h3{
+    font-size: 28px;
+    font-family: 'Righteous';
+    margin-bottom: 25px;
+}    
+.skills .skill >span{
+    font-weight: bold;
+    display: block;
+    margin-bottom: 10px;
+}
+.skills .skill .barra-skill{
+    height: 8px;
+    width: 80%;
+    background-color: #131517;
+    position: relative;
+    margin-bottom: 30px;
+}
+.skills .skill .progreso{
+    background-color: #1cb698;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 8px;
+}
+.skills .skill .barra-skill span{
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background-color: #1cb698;
+    border-radius: 50px;
+    line-height: 40px;
+    text-align: center;
+    top: -17px;
+    right: -15px;
+    font-size: 14px;
+}
+/*estas clases se agregaran dinamicamente mediante javascript*/
+.skills .skill .java{
+    width: 0%;
+    animation: 2s java forwards;
+}
+@keyframes java {
+    0%{width: 0%;}
+    100%{width: 70%;} 
+}
+.skills .skill .postgresqlmysql{
+    width: 0%;
+    animation: 2s jpostgresqlmysql forwards;
+}
+@keyframes postgresqlmysql {
+    0%{width: 0%;}
+    100%{width: 67%;} 
+}
+.skills .skill .javascript{
+    width: 0%;
+    animation: 2s javascript forwards;
+}
+@keyframes javascript {
+    0%{width: 0%;}
+    100%{width: 60%;} 
+}
+.skills .skill .htmlcss{
+    width: 0%;
+    animation: 2s htmlcss forwards;
+}
+@keyframes htmlcss {
+    0%{width: 0%;}
+    100%{width: 75%;} 
+}
+.skills .skill .react{
+    width: 0%;
+    animation: 2s react forwards;
+}
+@keyframes react {
+    0%{width: 0%;}
+    100%{width: 60%;} 
+}
+.skills .skill .git{
+    width: 0%;
+    animation: 2s git forwards;
+}
+@keyframes git {
+    0%{width: 0%;}
+    100%{width: 70%;} 
+}
+.skills .skill .communication{
+    width: 0%;
+    animation: 2s communication forwards;
+}
+@keyframes communication {
+    0%{width: 0%;}
+    100%{width: 70%;} 
+}
+.skills .skill .selflearning{
+    width: 0%;
+    animation: 2s selflearning forwards;
+}
+@keyframes selflearning {
+    0%{width: 0%;}
+    100%{width: 80%;} 
+}
+.skills .skill .adaptability{
+    width: 0%;
+    animation: 2s adaptability forwards;
+}
+@keyframes adaptability {
+    0%{width: 0%;}
+    100%{width: 80%;} 
+}
+.skills .skill .persistence{
+    width: 0%;
+    animation: 2s persistence forwards;
+}
+@keyframes persistence {
+    0%{width: 0%;}
+    100%{width: 85%;} 
+}
+.skills .skill .problemsolving{
+    width: 0%;
+    animation: 2s problemsolving forwards;
+}
+@keyframes problemsolving {
+    0%{width: 0%;}
+    100%{width: 75%;} 
+}
+.skills .skill .teamwork{
+    width: 0%;
+    animation: 2s teamwork forwards;
+}
+@keyframes teamwork {
+    0%{width: 0%;}
+    100%{width: 85%;} 
+}
+.skills .skill .leadership{
+    width: 0%;
+    animation: 2s leadership forwards;
+}
+@keyframes leadership {
+    0%{width: 0%;}
+    100%{width: 84%;} 
+}
+.skills .skill .creativity{
+    width: 0%;
+    animation: 2s creativity forwards;
+}
+@keyframes creativity {
+    0%{width: 0%;}
+    100%{width: 90%;} 
+}
+.skills .skill .empathy{
+    width: 0%;
+    animation: 2s empathy forwards;
+}
+@keyframes empathy {
+    0%{width: 0%;}
+    100%{width: 75%;} 
+}
+
+/*PROJECTS SECTION*/
+.projects{
+    background-color: #1e2326;
+    color: #fff;
+    padding: 50px 20px;
+}
+.projects .contenido-section{
+    max-width: 1100px;
+    margin: auto;
+}
+.projects h2{
+    font-size: 48px;
+    font-family: 'Righteous';
+    text-align: center;
+    padding: 20px 0;
+}
+.projects .galeria{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.projects .galeria .project{
+    position: relative;
+    max-width: 340px;
+    height: fit-content;
+    margin: 10px;
+}
+.projects .galeria .project img{
+    width: 100%;
+    display: block;
+}
+.projects .galeria .project .overlay{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background: linear-gradient(rgba(28,182,152,.8),rgba(28,182,152,.8));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 1s;
+    font-size: 18px;
+    letter-spacing: 3px;
+    opacity: 0;
+}
+.projects .galeria .project .overlay h3{
+    margin-bottom: 20px;
+    transition: 1s;
+
+}
+.projects .galeria .project .overlay:hover{
+    opacity: 1;
+}
+.projects .galeria .project .overlay:hover h3{
+    margin-bottom: 0px;
+}
+
+/*CONTACT SECTION*/
+.contact{
+    background-color: #1e2326;
+    color: #fff;
+    padding: 50px 0;
+}
+.contact .contenido-section{
+    max-width: 1100px;
+    margin: auto;
+}
+.contact h2{
+    font-size: 48px;
+    font-family: 'Righteous';
+    text-align: center;
+    padding: 20px 0;
+}
+.contact .fila{
+    display: flex;
+}
+.contact .col{
+    width: 50%;
+    padding: 10px;
+    position: relative;
+}
+.contact .col input, .contact .col textarea{
+    display: block;
+    width: 100%;
+    padding: 18px;
+    border: none;
+    margin-bottom: 20px;
+    background-color: #252a2e;
+    color: #fff;
+    font-size: 18px;
+}
+.contact button{
+    cursor: pointer;
+    background-color: transparent;
+    border: 2px solid #fff;
+    width: fit-content;
+    display: block;
+    margin: 20px auto;
+    padding: 10px 22px;
+    font-size: 16px;
+    color: #fff;
+    position: relative;
+    z-index: 10;
+}
+.contact button .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #1cb698;
+    z-index: -1;
+    transition: 1s;
+}
+.contact button:hover .overlay{
+    width: 100%;
+}
+.contact .col .info{
+    position: absolute;
+    top: 40%;
+    background-color: #252a2e;
+    padding: 20px;
+    width: 300px;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.contact .col .info ul{
+    list-style: none;
+}
+.contact .col .info ul li{
+    margin-bottom: 20px;
+}
+.contact .col .info ul li i{
+    color: #1cb698;
+    display: inline-block;
+    margin-right: 20px;
+}
+footer{
+    background-color: #252a2e;
+    color: #fff;
+    padding: 50px 0 30px 0;
+    text-align: center;
+    position: relative;
+    width: 100%;
+}
+footer .redes{
+    margin-bottom: 20px;
+}
+footer .redes a{
+    color: #fff;
+    display: inline-block;
+    text-decoration: none;
+    border: 1px solid #fff;
+    border-radius: 100%;
+    width: 42px;
+    height: 42px;
+    line-height: 42px;
+    margin: 40px 5px;
+    font-size: 20px;
+    transition: .3s;
+}
+footer .arriba{
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: #1cb698;
+    color: #fff;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: -25px;
+    border-radius: 50%;
+    line-height: 50px;
+    font-size: 18px;
 }
 
 /* Media Queries */
